# gallery.rs

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
migrations/: 20260101_initial.sql
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  processor.rs  service.rs  state.rs  watcher.rs
templates/: index.html
tests/: gallery.rs  unit.rs
tests/common/: mod.rs
tests/integration/: api.rs  common.rs  main.rs  security.rs  summary.rs  upload.rs  websocket.rs
tests/unit/: models.rs  utils.rs  watcher.rs
