[package]
name = "gallery-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
notify = "8.2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
snafu = "0.9.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
http-body-util = "0.1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Needed for integration tests
tower = "0.5"
http-body-util = "0.1"
